tests/bad/struct_method_redef_field.ae
/// fail: Type already has a field with this name

struct Foo {
    len: i32
}

def Foo::len(this) {}
